fixed oi series fetching issue on change of symbol

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -183,3 +183,8 @@ table.report tr th {
   font-size: large;
   color: brown;
 }
+
+.oiSeriesContainer {
+  display: flex;
+  flex-direction: column;
+}
