--- a/public/style/main.css
+++ b/public/style/main.css
@@ -13,6 +13,10 @@ body {
   flex-direction: column;
   /* font-size: 16px; */
 }
+
+.hidden {
+  display: none;
+}
 #app {
   display: flex;
   flex-direction: column;
