Added not under Call Put trend details

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -279,6 +279,7 @@ table.report tr th {
 .oiTrendContainer {
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 .analysis {
   display: flex;
