--- a/public/style/main.css
+++ b/public/style/main.css
@@ -287,6 +287,7 @@ table.report tr th {
   flex-basis: 40%;
   justify-content: center;
   align-items: center;
+  font-size: 110%;
 }
 .bold {
   font-weight: bold;
